--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-09  Michael McCarty <k6mmc@users.sourceforge.net>
+
+	* V67
+
+	* More endian changes to move the Mac PPC port along
+
 2007-01-09  Krzysztof Kosciuszkiewicz  -- via Michael McCarty
 
 	* V66
