--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-10  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V69
+
+	* First version with audio mixer, still does not load *.RAW audio
+
 2007-01-09  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V68
