--- a/TODO
+++ b/TODO
@@ -13,10 +13,6 @@ by typing Enter.
 in the baby screens, don't down sample then up sample
 
 =======
-when updating the x server, scan top and bottom of the previous
-and current image for identical parts, then send just the middle
-part that has changed
-
 wastes cpu time when showing the new image
 
 drop frames if getting behind on newscaster or movie playback
@@ -52,6 +48,22 @@ possible old bugs
 in RDafford, figure out how this came to be MaxRD = 80, but Safety = 90 once:
  if (class==2) roll+=Data->P[plr].Manned[index].MaxRD - Data->P[plr].Manned[index].Safety;
 
+================================================================
+CODE MAINTENANCE
+
+Clean up header files.
+
+Reduce global variables, most should be static anyway.
+
+Comment mysterious bits & pieces.
+
+Remove "magic numbers", change to #defines or enums.
+
+Comment important data structures.
+
+Introduce less cryptic names for some variables, especially globals!
+
+BIG THING: Separate game logic and AI from every other stuff
 ================================================================
 
 release checklist
