2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
	* V85

	* Forgot to actually add the diffstat results to the checkin

=== diffstat output ===

 ChangeLog |    8 +++++++-
 checkin2  |    2 +-
 version.c |    2 +-
 3 files changed, 9 insertions(+), 3 deletions(-)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2007-01-11  Michael McCarty <k6mmc@users.sourceforge.net>
+2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
+
+	* V85
+
+	* Forgot to actually add the diffstat results to the checkin
+
+2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
 
 	* V84
 
