2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
	* V86

	* Fixed an assertion in grGetPixel()

	* Fixed a crash in Future Missions when mousing over the bubbles

	* Removed some unused local variables in port.c

=== diffstat output ===

 ChangeLog |   10 ++++++++++
 gr.c      |    4 ++--
 mc2.c     |    4 ++--
 port.c    |    3 +--
 version.c |    2 +-
 5 files changed, 16 insertions(+), 7 deletions(-)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V86
+
+	* Fixed an assertion in grGetPixel()
+
+	* Fixed a crash in Future Missions when mousing over the bubbles
+
+	* Removed some unused local variables in port.c
+
+2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V85
 
 	* Forgot to actually add the diffstat results to the checkin
