2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
	* V88

	* MAC: Missions now play all the way through, need to work on the replay next.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V88
+
+	* MAC: Missions now play all the way through, need to work on the replay next.
+
+2007-01-12  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V87
 
 	* MAC: Lots of stuff working now, right up to the launch of the missions
