--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-16  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V97
+
+	* It appears that not all Patch structs were alike ;)
+
 2007-01-15  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V96
