--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V99
+
+	* Build under linux didn't like the 'RiSP' definition, changed
+	it to hex
+
+2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V98
 
 	* Renamed SF and SFInfo to  SaveFileHdr SaveFileInfo and moved them to data.h
