--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V100
+
+	* Removed nn.h header
+
+	* Added macros.h and endianness.h to Makefile.in
+
+2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V99
 
 	* Build under linux didn't like the 'RiSP' definition, changed
