--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-01-16  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V101
+
+	* Added utils/*
+
+	* Moved mkmovie.c to utils/
+
 2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
 
 	* V100
