--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-01-16  Michael McCarty <k6mmc@users.sourceforge.net>
+
+	* V102
+
+	* Replaced all the variations of the wait for mouse while loops with a function.
+
+	* Commented ResolveEvent() and removed unit check comment
+
+	* Replaced hard coded key codes for (UP|DN|LT|RT)_ARROW, K_ESCAPE, and K_ENTER
+
 2007-01-16  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V101
