2007-01-18  Michael McCarty <k6mmc@users.sourceforge.net>
	* V107

	* Modified TODO

	* Missed endianness.h change

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-01-18  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V107
+
+	* Modified TODO
+
+	* Missed endianness.h change
+
+2007-01-18  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V106
 
 	* Modified Xcode project to remove replay.h and uc.h and
