--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-30  Michael McCarty <k6mmc@users.sourceforge.net>
+
+	* V111
+
+	* Checked XXX tagged variables in prest.c
+
 2007-01-25  Michael McCarty <k6mmc@users.sourceforge.net>
 
 	* V110
