--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-01-31  Michael McCarty <k6mmc@users.sourceforge.net>
 
+	* V114
+
+	* Created os_win and os_macosx diretories
+
+	* Moved Xcode build related things into os_macosx
+
+2007-01-31  Michael McCarty <k6mmc@users.sourceforge.net>
+
 	* V113
 
 	* Gave rush.c, hardef.c, and intel.c a much needed indenting
