--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-01  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
+	* V116
+
+	* Corrected libtheora test in configure.in
+
+2007-02-01  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
 	* V115
 
 	* Rewrite of vtest2.c, uses only ogg,vorbis,theora and Just Works (TM).
