--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-31  Michael McCarty <k6mmc@users.sourceforge.net>
+
+	* V117
+
+	* Fixed MACOSX builds to use CONFIG_MACOSX
+
 2007-02-01  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V116
