--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-06  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 	
+	* V121
+
+	* Quick fix for huge memory leak (5MB each turn) in news.c
+
+	* Fix in Makefile.in
+
+2007-02-06  Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+	
 	* V120
 
 	* Few fixes & improvements in configure.in & Makefile.in
