--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2007-02-07  Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V123
+
+	* Changed the newscaster animation to just use a single file
+	handle instead of multiple opens and reading the entire file.
+
+	* Replaced a couple inline defined structures with something from
+	data.h
+
+	* Checked prefs.c for XXX tagged units
+
+	* reindented news.c
+
+	* Added valgrind.h header, currently not included
+
 2007-02-06  Michael McCarty <k6mmc@users.sourceforge.net>
 
 	* V122
